syntax = "proto3";

// Questo è il namespace del pacchetto per evitare conflitti di nomi
package updates;

service UpdateService {
  rpc StreamUpdates (UpdateRequest) returns (stream UpdateMessage);
}

message UpdateRequest {
  string topic = 1;
}

message UpdateMessage {
  string content = 1;
  // Il timestamp è int64 per precauzione in caso di valori molto grandi, ma non può essere mappato in un Number in JavaScript perchè non può contenere valore superiore a 2^53-1 mentre int64 puo contenere valori fino a 2^63-1
  // Si può forzare ad usare number nel buf.gen.yaml, ma potrebbe essere rischioso se si usano valori molto grandi
  int64 timestamp = 2;
}